// HakjDB gRPC API
// API version: 1.2.0
//
// This package contains Protobuf definitions related to connection utility RPCs.

syntax = "proto3";
package api.v1.echopb;

option java_package = "com.github.hakjdb.hakjdbjava.api.v1.echopb";

message UnaryEchoRequest {
  // Message to be sent.
  string msg = 1;
}

message UnaryEchoResponse {
  // Message to be received.
  string msg = 1;
}

// EchoService provides connection utility RPCs.
// The RPCs in this service can be used to test connections to the server
// with minimal network overhead.
service EchoService {
  // UnaryEcho sends a message to the server and returns the same message back.
  rpc UnaryEcho(UnaryEchoRequest) returns (UnaryEchoResponse) {}
}